Fix spacing around error message and button so that forms doesn't move around with message

--- a/maori_dictionary/static/css/style.css
+++ b/maori_dictionary/static/css/style.css
@@ -40,10 +40,6 @@ select {
     padding: 0.3rem;
 }
 
-#add_category_error {
-    padding-top: 40px;
-    padding-bottom: 0;
-}
 
 #category-submit {
     padding-top: 10px;
@@ -198,6 +194,7 @@ textarea {
 
 .error {
     color: #f00;
+    height: 20px;
 }
 
 .login {
